--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="movie_item_image">Picture of movie</string>
     <string name="backdrop_image">Backdrop image</string>
     <string name="poster_image">Poster image</string>
+    <string name="search_title">Search</string>
+    <string name="search_hint">Enter movie name</string>
+    <string name="title_search">Search</string>
 </resources>
