--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="search_title">Search</string>
     <string name="search_hint">Enter movie name</string>
     <string name="title_search">Search</string>
+    <string name="title_favourite">Favourites</string>
 </resources>
