Formatted xml files and empty view added.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,4 +15,5 @@
     <string name="language">"Lanuguage: "</string>
     <string name="ratings">"Ratings: "</string>
     <string name="votes">Votes</string>
+    <string name="no_fav">Favoutites will appear here</string>
 </resources>
